--- a/app/src/main/res/layout/activity_monthly_summary.xml
+++ b/app/src/main/res/layout/activity_monthly_summary.xml
@@ -104,7 +104,7 @@
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <!--<androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/table_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -318,7 +318,7 @@
 
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
-            </androidx.constraintlayout.widget.ConstraintLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>-->
 
         </LinearLayout>
 
